--- a/index.html
+++ b/index.html
@@ -32,10 +32,49 @@
                   </nav>
             </div>
             <div class="row">
-                <div class="col">
-                    <h1>Kashan Kashif Pervaiz Maskin Shotra</h1>
-                    <p> I am Kashan I like Dinosaurs,MYTHS and Movie Monsters. I am a game Developer Aswell as a gamer I enjoy all types of gaming including Board games but my favorite is D&D</p>
+                <div class="col-6">
+                    <h1 class="title">Kashan Kashif Pervaiz Maskin Shotra</h1>
+                    <p class="sub-title"> I am Kashan I like Dinosaurs,MYTHS and Movie Monsters. I am a game Developer Aswell as a gamer I enjoy all types of gaming including Board games but my favorite is D&D</p>
                 </div>
+                <div class="col-6">
+                  <img src="WIN_20250428_17_53_59_Pro.jpg" alt="kashan" style="border-radius: 40%; height: 500px; width: 600px;padding: 30px;" >
+                </div>
+            </div>
+            <div class="row heading">
+ <h3 >Projects</h3>
+
+            </div>
+            <div class="row"> 
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                  <img src="Screenshot 2025-04-28 182816.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Rolling Dice</h5>
+                    <p class="card-text">If you dont have a dice this dice will help randomise your choices</p>
+                    <a href="https://codepen.io/dreadkashan/pen/jEEqNzZ" class="btn btn-primary">link</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                  <img src="Screenshot 2025-04-29 142813.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">StopWatch</h5>
+                    <p class="card-text">StopWatch will help calculate time for you</p>
+                    <a href="https://codepen.io/dreadkashan/pen/bNNEOxE" class="btn btn-primary">link</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                  <img src="Screenshot 2025-04-29 142602.png" class="card-img-top" alt="to do list">
+                  <div class="card-body">
+                    <h5 class="card-title">To Do List</h5>
+                    <p class="card-text">To Do List will help you keep track of what you need to do</p>
+                    <a href="https://codepen.io/dreadkashan/pen/zxxOoxN" class="btn btn-primary">link</a>
+                  </div>
+                </div>
+              </div>
             </div>
         </div>
      </body>
