--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+      <script src="https://kit.fontawesome.com/d6eee9e59e.js" crossorigin="anonymous"></script>
         <title>HOME </title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
@@ -44,9 +45,9 @@
  <h3 >Projects</h3>
 
             </div>
-            <div class="row"> 
-              <div class="col">
-                <div class="card" style="width: 18rem;">
+            <div class="row" style="margin: 20px;"> 
+              <div class="col"  style="text-align: center;">
+                <div class="card" style="width: 20rem;">
                   <img src="Screenshot 2025-04-28 182816.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Rolling Dice</h5>
@@ -55,8 +56,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col">
-                <div class="card" style="width: 18rem;">
+              <div class="col"  style="text-align: center;">
+                <div class="card" style="width: 20rem;">
                   <img src="Screenshot 2025-04-29 142813.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">StopWatch</h5>
@@ -65,16 +66,31 @@
                   </div>
                 </div>
               </div>
-              <div class="col">
-                <div class="card" style="width: 18rem;">
+              <div class="col" style="text-align: center;">
+                <div class="card" style="width: 20rem;">
                   <img src="Screenshot 2025-04-29 142602.png" class="card-img-top" alt="to do list">
                   <div class="card-body">
-                    <h5 class="card-title">To Do List</h5>
+             <h5 class="card-title">To Do List</h5>
                     <p class="card-text">To Do List will help you keep track of what you need to do</p>
-                    <a href="https://codepen.io/dreadkashan/pen/zxxOoxN" class="btn btn-primary">link</a>
+                    <a href="https://codepen.io/dreadkashan/pen/zxxOoxN" class="btn btn-primary" >link</a>
                   </div>
                 </div>
               </div>
+            </div>
+            <div class="row" style="background-color: rgb(247, 247, 248);">
+
+            
+            <div class="row" style=" width:200px ;position: absolute;left: 40%; ">
+              <div class="col">
+                <i class="fa-brands fa-youtube" ></i>
+
+              </div>
+              <div class="col">
+                <i class="fa-brands fa-square-snapchat" ></i>
+              </div>
+              
+            </div>
+            <p style="text-align: center; margin: 20px;">Design and Developed by Kashan Kashif Pervaiz Maskin Shotra</p>
             </div>
         </div>
      </body>
