--- a/blogs.html
+++ b/blogs.html
@@ -25,53 +25,46 @@
                             <a class="nav-link" href="blogs.html" style='color: royalblue;'>Blogs</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#" style='color: royalblue;'>Projects</a>
+                            <a class="nav-link" href="index.html" style='color: royalblue;'>Projects</a>
                           </li>
                         </ul>
                       </div>
                     </div>
                   </nav>
             </div>
-            <div class="row">
-                <div class="col-6">
-                    <h1 class="title">Kashan Kashif Pervaiz Maskin Shotra</h1>
-                    <p class="sub-title"> I am Kashan I like Dinosaurs,MYTHS and Movie Monsters. I am a game Developer Aswell as a gamer I enjoy all types of gaming including Board games but my favorite is D&D</p>
-                </div>
-                <div class="col-6">
-                  <img src="WIN_20250428_17_53_59_Pro.jpg" alt="kashan" style="border-radius: 40%; height: 500px; width: 600px;padding: 30px;" >
-                </div>
-            </div>
+            
             <div class="row heading">
- <h3 >Projects</h3>
+ <h3 >Blogs</h3>
 
             </div>
-            <div class="row" id="Projects" style="margin: 20px;"> 
+            <div class="row" style="margin: 20px;"> 
               <div class="col"  style="text-align: center;">
                 <div class="card" style="width: 20rem;">
-                  <img src="Screenshot 2025-04-28 182816.png" class="card-img-top" alt="...">
+                  <img src="Screenshot 2025-05-05 180342.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Rolling Dice</h5>
-                    <p class="card-text">If you dont have a dice this dice will help randomise your choices</p>
+                    <h5 class="card-title">Font Awesome</h5>
+                    <p class="card-text">Font Awesome need help finding icons for coding in html Font Awesome has got you
+                        Explore stunning icon for every scenerio and bask in the excellence of such cunning icons.</p>
                     <a href="https://codepen.io/dreadkashan/pen/jEEqNzZ" class="btn btn-primary">link</a>
                   </div>
                 </div>
               </div>
               <div class="col"  style="text-align: center;">
                 <div class="card" style="width: 20rem;">
-                  <img src="Screenshot 2025-04-29 142813.png" class="card-img-top" alt="...">
+                  <img src="Screenshot 2025-05-05 181638.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">StopWatch</h5>
-                    <p class="card-text">StopWatch will help calculate time for you</p>
+                    <h5 class="card-title">Speedrunner Beats Zelda:Breath Of The Wild final boss in less than 20 mins on the SWITCH 2 demo</h5>
+                    <p class="card-text"> the demo for the SWITCH 2 allows for you to try and beat the final boss of botw in 20 mins a speed runner whos name i dont know has beaten the demo for the switch 2 in 15 mins</p>
                     <a href="https://codepen.io/dreadkashan/pen/bNNEOxE" class="btn btn-primary">link</a>
                   </div>
                 </div>
               </div>
               <div class="col" style="text-align: center;">
                 <div class="card" style="width: 20rem;">
-                  <img src="Screenshot 2025-04-29 142602.png" class="card-img-top" alt="to do list">
+                  <img src="Screenshot 2025-05-05 182405.png" class="card-img-top" alt="to do list">
                   <div class="card-body">
-             <h5 class="card-title">To Do List</h5>
-                    <p class="card-text">To Do List will help you keep track of what you need to do</p>
+             <h5 class="card-title">Fisch player base Declining FAST</h5>
+                    <p class="card-text">Fisch playerbase has been Declining due to the owners of the Well Known game Blade Ball buying the game and making bad updates and in there most recent efforts by making all enchants good it didnt work the player base is at a all time low  and has just hit below 60k players playing will they be able to actually regain there previous players who knows</p>
                     <a href="https://codepen.io/dreadkashan/pen/zxxOoxN" class="btn btn-primary" >link</a>
                   </div>
                 </div>
