--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <a class="nav-link" href="blogs.html" style='color: royalblue;'>Blogs</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#" style='color: royalblue;'>Projects</a>
+                            <a class="nav-link" href="projects.html" style='color: royalblue;'>Projects</a>
                           </li>
                         </ul>
                       </div>
