--- a/projects.html
+++ b/projects.html
@@ -34,42 +34,70 @@
             </div>
             
             <div class="row heading">
- <h3 >Blogs</h3>
+ <h3 >Projects</h3>
 
             </div>
-            <div class="row" style="margin: 20px;">  
+            <div class="row" id="Projects" > 
               <div class="col"  style="text-align: center;">
-                <div class="card" style="width: 20rem;height: 600px;">
-                  <img src="Screenshot 2025-05-05 180342.png" class="card-img-top" alt="...">
+                <div class="card" style="width: 20rem;margin: 20px;">
+                  <img src="Screenshot 2025-04-28 182816.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Font Awesome</h5>
-                    <p class="card-text">Font Awesome need help finding icons for coding in html Font Awesome has got you
-                        Explore stunning icon for every scenerio and bask in the excellence of such cunning icons.</p>
+                    <h5 class="card-title">Rolling Dice</h5>
+                    <p class="card-text">If you dont have a dice this dice will help randomise your choices</p>
                     <a href="https://codepen.io/dreadkashan/pen/jEEqNzZ" class="btn btn-primary">link</a>
                   </div>
                 </div>
               </div>
               <div class="col"  style="text-align: center;">
-                <div class="card" style="width: 20rem; height: 600px;">
-                  <img src="Screenshot 2025-05-05 181638.png" class="card-img-top" alt="...">
+                <div class="card" style="width: 20rem;margin: 20px;">
+                  <img src="Screenshot 2025-04-29 142813.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Speedrunner Beats Zelda:Breath Of The Wild final boss in less than 20 mins on the SWITCH 2 demo</h5>
-                    <p class="card-text"> the demo for the SWITCH 2 allows for you to try and beat the final boss of botw in 20 mins a speed runner whos name i dont know has beaten the demo for the switch 2 in 15 mins</p>
+                    <h5 class="card-title">StopWatch</h5>
+                    <p class="card-text">StopWatch will help calculate time for you</p>
                     <a href="https://codepen.io/dreadkashan/pen/bNNEOxE" class="btn btn-primary">link</a>
                   </div>
                 </div>
               </div>
               <div class="col" style="text-align: center;">
-                <div class="card" style="width: 20rem; height: 600px;">
-                  <img src="Screenshot 2025-05-05 182405.png" class="card-img-top" alt="to do list">
+                <div class="card" style="width: 20rem;margin: 20px;">
+                  <img src="Screenshot 2025-04-29 142602.png" class="card-img-top" alt="to do list">
                   <div class="card-body">
-             <h5 class="card-title">Fisch player base Declining FAST</h5>
-                    <p class="card-text">Fisch playerbase has been Declining due to the owners of the Well Known game Blade Ball buying the game and making bad updates and in there most recent efforts by making all enchants good it didnt work the player base is at a all time low  and has just hit below 60k players playing will they be able to actually regain there previous players who knows</p>
+             <h5 class="card-title">To Do List</h5>
+                    <p class="card-text">To Do List will help you keep track of what you need to do</p>
                     <a href="https://codepen.io/dreadkashan/pen/zxxOoxN" class="btn btn-primary" >link</a>
                   </div>
                 </div>
               </div>
-            
+              <div class="col" style="text-align: center; ">
+              <div class="card" style="width: 20rem;margin: 20px;">
+                <img src='Screenshot 2025-05-06 175833.png' class="card-img-top" alt="Area calculator">
+                <div class="card-body">
+                  <h5 class="card-title">Area Calculator</h5>
+                  <p class="card-text">Area calculator will help you calculate the area of any given shape.</p>
+                  <a href="https://codepen.io/dreadkashan/pen/zxYLwXM" class="btn btn-primary">link</a>
+                </div>
+              </div>
+              </div>
+              <div class="col" style="text-align: center; ">
+              <div class="card" style="width: 20rem;margin: 20px;">
+                <img src="Screenshot 2025-05-06 180549.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Digital clock</h5>
+                  <p class="card-text">Digital clock or Digi clock will keep track of the time with the seconds minutes and hours.</p>
+                  <a href="https://codepen.io/dreadkashan/pen/xbbKmyO" class="btn btn-primary">link</a>
+                </div>
+              </div>
+              </div>
+              <div class="col" style="text-align: center; ">
+                <div class="card" style="width: 20rem;margin: 20px;">
+                    <img src='Screenshot 2025-05-06 181048.png' class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Palindrome checker</h5>
+                      <p class="card-text">need help checking if something is a palindrome Palindrome checker has got you.</p>
+                      <a href="https://codepen.io/dreadkashan/pen/EaaYKYZ" class="btn btn-primary">link</a>
+                    </div>
+                  </div>
+              </div>
             </div>
             <div class="row" style="background-color: rgb(148, 152, 152);">
 
