--- a/hobby.html
+++ b/hobby.html
@@ -34,8 +34,11 @@
             </div>
            
             <div class="row heading">
- <h3 >Animation</h3>
-
+ <h3 >hobbies</h3>
+<a style="color: blanchedalmond;" href="https://www.youtube.com/watch?v=qmW24YxMjn4">kashans animation</a>
+<div>my hobbies include animating,making youtube videos,coding and gaming 
+  i think you should try new things and do new stuff and try your best at everything you do whether it is gaming or cleaning the house give it everything you got
+</div>
             </div>
             <div class="row" id="animation" style="margin: 20px;"> 
               <div class="col"></div>
