--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,9 @@
                           <li class="nav-item">
                             <a class="nav-link" href="projects.html" style='color: royalblue;'>Projects</a>
                           </li>
+                           <li class="nav-item">
+                          <a class="nav-link" href="hobby.html" style='color: royalblue;'>???</a>
+                        </li>
                         </ul>
                       </div>
                     </div>
